# whippyunits-rs

./: CHANGELOG.md  Cargo.toml
examples/operations/: type_conversions.rs
src/: lib.rs  lossy_into.rs  quantity.rs
tests/: test_lossy_into.rs
