[workspace]
members = [
    ".",
    "proc-macros",
    "whippyunits-core",
    "whippyunits-pretty",
    "lsp-proxy",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["Oblarg"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/WhippyUnits/whippyunits-rs"

[package]
name = "whippyunits"
version = "0.2.3"
edition = "2024"
authors = ["Oblarg"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/WhippyUnits/whippyunits-rs"
description = "A zero-cost, pure rust units-of-measure library for applied computation"
keywords = ["units", "measurement", "dimensional", "SI", "whippyunits"]
categories = ["science", "no-std", "development-tools"]
readme = "README.md"

[dependencies]
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
syn = { version = "2.0", features = ["full"], optional = true }
libm = "0.2"
whippyunits-proc-macros = { path = "proc-macros", version = "0.2.1" }
whippyunits-core = { path = "whippyunits-core", version = "0.2.1" }
num-traits = "0.2"
culit = "0.6.0"
op_result = "0.5.8"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
trybuild = "1.0"


[features]
default = ["std", "serde"]
std = ["alloc"]
alloc = []
serde = ["alloc", "dep:serde", "dep:serde_json", "dep:syn", "dep:proc-macro2", "dep:quote"]
cge = ["whippyunits-core/cge"]

[lib]
name = "whippyunits"
path = "src/lib.rs"

[[example]]
name = "filter"
path = "examples/generics/filter.rs"

[[example]]
name = "pid_controller"
path = "examples/generics/pid_controller.rs"

[[example]]
name = "centripetal_acceleration"
path = "examples/generics/centripetal_acceleration.rs"

[[example]]
name = "serialization"
path = "examples/serialization/serialization.rs"

[[example]]
name = "deserialization"
path = "examples/serialization/deserialization.rs"

[[example]]
name = "arithmetic"
path = "examples/operations/arithmetic.rs"

[[example]]
name = "rescaling"
path = "examples/operations/rescaling.rs"

[[example]]
name = "comparison"
path = "examples/operations/comparison.rs"

[[example]]
name = "value_access"
path = "examples/operations/value_access.rs"

[[example]]
name = "type_conversions"
path = "examples/operations/type_conversions.rs"

[[example]]
name = "storage_types"
path = "examples/getting_started/storage_types.rs"

[[example]]
name = "concepts"
path = "examples/getting_started/concepts.rs"

[[example]]
name = "declarators"
path = "examples/getting_started/declarators.rs"

[[example]]
name = "common_errors"
path = "examples/getting_started/common_errors.rs"

[[example]]
name = "rescale_targeting"
path = "examples/type_assertions/rescale_targeting.rs"

[[example]]
name = "safe_mult_div"
path = "examples/type_assertions/safe_mult_div.rs"

[[example]]
name = "branded_declarators"
path = "examples/custom_declarators/branded_declarators.rs"

[[example]]
name = "rescaling_declarators"
path = "examples/custom_declarators/rescaling_declarators.rs"

[[example]]
name = "scalar_erasure"
path = "examples/erasure/scalar_erasure.rs"

[[example]]
name = "angular_erasure"
path = "examples/erasure/angular_erasure.rs"

[[example]]
name = "nonstorage_units"
path = "examples/foreign_units/nonstorage_units.rs"

[[example]]
name = "affine_units"
path = "examples/foreign_units/affine_units.rs"




[profile.dev]
incremental = false

[profile.release]
incremental = false

